--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -16,6 +16,7 @@
 \acrodef{OUCH}{\ac{OU} Comparative Hypotheses}
 \acrodef{TSI}{Tissue Specificity Index}
 \acrodef{SRA}{Sequence Read Archive}
+\acrodef{GH}{growth hormone}
 
 %%% Local Variables:
 %%% mode: latex
